<resources>
    <string name="app_name">Fitness Tracker</string>

    <!--authorization-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signing_in">Sign in</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="repeat_password">Repeat password</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="no_callback_implementation_error">must implement callback</string>
    <string name="empty_fields_toast">Fill all fields</string>
    <string name="incorrect_email_or_password_toast">Incorrect email or password</string>
    <string name="authorization_token_invalid">Authorization token error</string>
    <string name="authorization_token_expired">Authorization token expired</string>

    <!--nav drawer    -->
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <string name="main">Main</string>
    <string name="notifications">Notifications</string>
    <string name="logout">Log out</string>

    <!--tracks    -->
    <string name="track_description">track</string>
    <string name="distance">Distance: </string>
    <string name="duration">Duration: </string>
    <string name="no_tracks_found">No tracks found</string>
    <string name="finish_marker">FINISH</string>
    <string name="start_marker">START</string>
    <string name="metres">M</string>


    <!--notifications    -->
    <string name="notification_description">notification</string>
    <string name="no_notifications_found">Notifications not found</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="add_notification">Add notification</string>
    <string name="edit_notification">Edit notification</string>
    <string name="cancel_btn_text">Cancel</string>
    <string name="add_btn_text">Add</string>
    <string name="save_btn_text">Save</string>
    <string name="incorrect_time_error">You can\'t run in the past</string>

    <!--run    -->
    <string name="start_btn_text">START</string>
    <string name="finish_btn_text">FINISH</string>
    <string name="back_to_main_btn_text">Back to main</string>
    <string name="results_label">Results</string>
    <string name="finish_run_message">Finish run first</string>
    <string name="twice_denied_permission_title">Necessary permission was denied twice!</string>
    <string name="twice_denied_permission_message">To access screen apply location permissions in device system settings</string>
    <string name="btn_ok_text">OK</string>
    <string name="no_location_permissions">No location permissions!</string>
    <string name="no_location_permissions_message">Need to apply location permissions for saving tracks</string>
    <string name="btn_apply_text">Apply</string>
    <string name="enable_gps_message">Enable GPS to start</string>
    <string name="no_internet_connection_error">No internet connection. Can\'t save track on server.</string>
    <string name="no_points_error">Track wasn\'t saved, because of no points.</string>

</resources>