<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.run.RunActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="@dimen/start_btn_height"
        android:layout_margin="@dimen/start_btn_margin"
        android:textSize="@dimen/big_text_size"
        android:text="@string/start_btn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layout_run_started"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="false"
        android:gravity="center"
        android:orientation="vertical"
        android:alpha="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_running_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/interval_between_views"
            android:textColor="@color/main_text_color"
            android:textSize="@dimen/big_text_size"
            tools:text="00:00:00" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/interval_between_views"
            android:backgroundTint="#FF0000"
            android:text="@string/finish_btn_text"
            android:textSize="@dimen/mid_text_size" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_run_finished"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="false"
        android:alpha="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_results_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/interval_between_views"
            android:text="@string/results_label"
            android:textColor="@color/main_text_color"
            android:textSize="@dimen/big_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_stopped_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/interval_between_views"
            android:textColor="@color/main_text_color"
            android:textSize="@dimen/mid_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_results_label"
            tools:text="00:00:00" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_running_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/interval_between_views"
            android:textColor="@color/main_text_color"
            android:textSize="@dimen/mid_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_stopped_timer"
            tools:text="100" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_metres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/interval_between_views"
            android:text="@string/metres"
            android:textColor="@color/main_text_color"
            android:textSize="@dimen/mid_text_size"
            app:layout_constraintStart_toEndOf="@+id/text_running_distance"
            app:layout_constraintTop_toBottomOf="@+id/text_stopped_timer" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_back_to_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/interval_between_views"
            android:text="@string/back_to_main_btn_text"
            android:textSize="@dimen/mid_text_size"
            app:icon="@drawable/ic_action_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_running_distance" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>